# Course-Choosing-JW-USTC

./: .gitignore  README.md  choosing.py  conf.py  main.py  pyproject.toml  run.cmd
